@@ -1,3 +1,15 @@
+
+==============================================================
+LuaTeX 1.11.1 2019-10-18
+==============================================================
+
+First release of luahbtex / luajithbtex, 
+luatex / luajittex with harfbuzz.
+Small bug fixes, code clean up and a couple of new primitives
+to match eTeX. See ChangeLog and the manual.
+
+
+
 ==============================================================
 LuaTeX 1.10.0 2019-03-15
 ==============================================================
